[gd_scene load_steps=3 format=3 uid="uid://bh86pg0gra60k"]

[ext_resource type="Script" path="res://Scripts/MainSweeper.gd" id="1_agoxg"]
[ext_resource type="PackedScene" uid="uid://cd4njqupgwpeb" path="res://Scenes/Square.tscn" id="2_onwf2"]

[node name="Mainsweeper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agoxg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Minesweeper"

[node name="GridContainer_Minesweeper" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 10

[node name="Square" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square2" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square3" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square4" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square5" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square6" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square7" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square8" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square9" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square10" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square11" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square12" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square13" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square14" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square15" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square16" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square17" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square18" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square19" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square20" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square21" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square22" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square23" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square24" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square25" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square26" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square27" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square28" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square29" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square30" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square31" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square32" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square33" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square34" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square35" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square36" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square37" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square38" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square39" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square40" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square41" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square42" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square43" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square44" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square45" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square46" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square47" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square48" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square49" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square50" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square51" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square52" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square53" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square54" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square55" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square56" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square57" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square58" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square59" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square60" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square61" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square62" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square63" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square64" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square65" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square66" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square67" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square68" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square69" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square70" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square71" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square72" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square73" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square74" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square75" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square76" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square77" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square78" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square79" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square80" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square81" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square82" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square83" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square84" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square85" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square86" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square87" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square88" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square89" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square90" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square91" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square92" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square93" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square94" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square95" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square96" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square97" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square98" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square99" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="Square100" parent="VBoxContainer/GridContainer_Minesweeper" instance=ExtResource("2_onwf2")]
layout_mode = 2

[node name="VBoxContainer_infoBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2

[node name="Label_mine" type="Label" parent="VBoxContainer/VBoxContainer_infoBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Juega:
"

[node name="Label_minesLeft" type="Label" parent="VBoxContainer/VBoxContainer_infoBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "10"

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Reiniciar"

[node name="Button_return" type="Button" parent="VBoxContainer/VBoxContainer_infoBox"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer_infoBox/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer_infoBox/Button_return" to="." method="_on_button_return_pressed"]
